# blog-stalking

./: Dockerfile  INIT.md  README.md  construct_email.py  docker-compose.yml  feeds.py  main.py  pyproject.toml  recommender.py  tao_feed.py  translation.py  validate_feeds.py
.github/workflows/: main.yml  test.yml
feeds/: blogs.json  test-blogs.json
tests/: test_feeds.py
