[project]
name = "blog-pusher"
version = "0.1.0"
description = "Translate RSS/Atom feeds and push them to your inbox."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "openai>=1.57.0",
    "python-dotenv>=1.0.1",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
]
